deploy: fe19a057509106bb30dcc2076db9d872b8a23f85

--- a/slides/00_intro.html
+++ b/slides/00_intro.html
@@ -141,15 +141,15 @@ data-visibility="hidden">
 <h1 data-visibility="hidden">schedule</h1>
 <table>
 <colgroup>
-<col style="width: 7%" />
-<col style="width: 15%" />
-<col style="width: 52%" />
-<col style="width: 25%" />
+<col style="width: 4%" />
+<col style="width: 14%" />
+<col style="width: 51%" />
+<col style="width: 28%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: right;">week</th>
-<th style="text-align: center;">date</th>
+<th style="text-align: right;">date</th>
 <th style="text-align: center;">lecture</th>
 <th style="text-align: center;">practical class</th>
 </tr>
@@ -157,86 +157,86 @@ data-visibility="hidden">
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">1</td>
-<td style="text-align: center;">2024-09-10</td>
+<td style="text-align: right;">2025-09-17</td>
 <td style="text-align: center;">intro, software architecture, SDLC</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">2</td>
-<td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">3</td>
-<td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis, user story
-mapping</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
+<td style="text-align: right;">2</td>
+<td style="text-align: right;">2025-09-24</td>
+<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">3</td>
+<td style="text-align: right;">2025-10-01</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="even">
 <td style="text-align: right;">4</td>
-<td style="text-align: center;">2024-10-01</td>
+<td style="text-align: right;">2025-10-08</td>
 <td style="text-align: center;">UML, C4</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
-<td style="text-align: center;">2024-10-08</td>
+<td style="text-align: right;">2025-10-15</td>
 <td style="text-align: center;">design patterns</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
-<td style="text-align: center;">2024-10-15</td>
+<td style="text-align: right;">2025-10-22</td>
 <td style="text-align: center;">interfaces, implementation planning</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;"><strong>req. analysis demo</strong></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
-<td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">wireframing, clean clode</td>
-<td style="text-align: center;">project workshop</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">8</td>
-<td style="text-align: center;">2024-10-29</td>
+<td style="text-align: right;">2025-10-29</td>
 <td style="text-align: center;"><strong>school holiday</strong></td>
 <td style="text-align: center;"></td>
 </tr>
+<tr class="even">
+<td style="text-align: right;">8</td>
+<td style="text-align: right;">2025-11-05</td>
+<td style="text-align: center;">wireframing, clean clode</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
 <tr class="odd">
 <td style="text-align: right;">9</td>
-<td style="text-align: center;">2024-11-05</td>
+<td style="text-align: right;">2025-11-12</td>
 <td style="text-align: center;">code quality, code review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">10</td>
-<td style="text-align: center;">2024-11-12</td>
+<td style="text-align: right;">2025-11-19</td>
 <td style="text-align: center;">testing, legacy code</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">11</td>
-<td style="text-align: center;">2024-11-19</td>
+<td style="text-align: right;">2025-11-26</td>
 <td style="text-align: center;">CI, automatization, devops</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">12</td>
-<td style="text-align: center;">2024-11-26</td>
+<td style="text-align: right;">2025-12-03</td>
 <td style="text-align: center;">summary, course feedback</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">13</td>
-<td style="text-align: center;">2024-12-03</td>
-<td style="text-align: center;">midterm</td>
-<td style="text-align: center;">project demo</td>
+<td style="text-align: right;">2025-12-10</td>
+<td style="text-align: center;"><strong>midterm</strong></td>
+<td style="text-align: center;"><strong>design demo</strong></td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">14</td>
-<td style="text-align: center;">2024-12-10</td>
+<td style="text-align: right;">2025-12-17</td>
 <td style="text-align: center;">no planned lecture</td>
 <td style="text-align: center;"></td>
 </tr>
@@ -251,15 +251,15 @@ class="title-slide slide level1 exclude-header">
 <div class="exclude">
 <table>
 <colgroup>
-<col style="width: 7%" />
-<col style="width: 15%" />
-<col style="width: 52%" />
-<col style="width: 25%" />
+<col style="width: 4%" />
+<col style="width: 14%" />
+<col style="width: 51%" />
+<col style="width: 28%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: right;">week</th>
-<th style="text-align: center;">date</th>
+<th style="text-align: right;">date</th>
 <th style="text-align: center;">lecture</th>
 <th style="text-align: center;">practical class</th>
 </tr>
@@ -267,46 +267,46 @@ class="title-slide slide level1 exclude-header">
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">1</td>
-<td style="text-align: center;">2024-09-10</td>
+<td style="text-align: right;">2025-09-17</td>
 <td style="text-align: center;">intro, software architecture, SDLC</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">2</td>
-<td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">3</td>
-<td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis, user story
-mapping</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
+<td style="text-align: right;">2</td>
+<td style="text-align: right;">2025-09-24</td>
+<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">3</td>
+<td style="text-align: right;">2025-10-01</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="even">
 <td style="text-align: right;">4</td>
-<td style="text-align: center;">2024-10-01</td>
+<td style="text-align: right;">2025-10-08</td>
 <td style="text-align: center;">UML, C4</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
-<td style="text-align: center;">2024-10-08</td>
+<td style="text-align: right;">2025-10-15</td>
 <td style="text-align: center;">design patterns</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
-<td style="text-align: center;">2024-10-15</td>
+<td style="text-align: right;">2025-10-22</td>
 <td style="text-align: center;">interfaces, implementation planning</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;"><strong>req. analysis demo</strong></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
-<td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">wireframing, clean clode</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: right;">2025-10-29</td>
+<td style="text-align: center;"><strong>school holiday</strong></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
@@ -317,15 +317,15 @@ mapping</td>
 <div class="exclude">
 <table>
 <colgroup>
-<col style="width: 7%" />
-<col style="width: 15%" />
-<col style="width: 52%" />
-<col style="width: 25%" />
+<col style="width: 4%" />
+<col style="width: 14%" />
+<col style="width: 51%" />
+<col style="width: 28%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: right;">week</th>
-<th style="text-align: center;">date</th>
+<th style="text-align: right;">date</th>
 <th style="text-align: center;">lecture</th>
 <th style="text-align: center;">practical class</th>
 </tr>
@@ -333,43 +333,43 @@ mapping</td>
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">8</td>
-<td style="text-align: center;">2024-10-29</td>
-<td style="text-align: center;"><strong>school holiday</strong></td>
-<td style="text-align: center;"></td>
+<td style="text-align: right;">2025-11-05</td>
+<td style="text-align: center;">wireframing, clean clode</td>
+<td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">9</td>
-<td style="text-align: center;">2024-11-05</td>
+<td style="text-align: right;">2025-11-12</td>
 <td style="text-align: center;">code quality, code review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">10</td>
-<td style="text-align: center;">2024-11-12</td>
+<td style="text-align: right;">2025-11-19</td>
 <td style="text-align: center;">testing, legacy code</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">11</td>
-<td style="text-align: center;">2024-11-19</td>
+<td style="text-align: right;">2025-11-26</td>
 <td style="text-align: center;">CI, automatization, devops</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">12</td>
-<td style="text-align: center;">2024-11-26</td>
+<td style="text-align: right;">2025-12-03</td>
 <td style="text-align: center;">summary, course feedback</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">13</td>
-<td style="text-align: center;">2024-12-03</td>
-<td style="text-align: center;">midterm</td>
-<td style="text-align: center;">project demo</td>
+<td style="text-align: right;">2025-12-10</td>
+<td style="text-align: center;"><strong>midterm</strong></td>
+<td style="text-align: center;"><strong>design demo</strong></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">14</td>
-<td style="text-align: center;">2024-12-10</td>
+<td style="text-align: right;">2025-12-17</td>
 <td style="text-align: center;">no planned lecture</td>
 <td style="text-align: center;"></td>
 </tr>
@@ -384,7 +384,7 @@ mapping</td>
 <ul>
 <li>available online in two formats
 <ul>
-<li>hangout</li>
+<li>handout</li>
 <li>presentation</li>
 </ul></li>
 <li><a
@@ -613,9 +613,16 @@ class="citation" data-cites="enwiki:1236668404">[3]</span>.</p>
 <p><strong>dormant rot</strong>: the software in question is not
 changed, but as the environment evolves, it eventually becomes
 dysfunctional</p>
-<div class="fragment mt-3" data-fragment-index="2">
+<div class="fragment mt-3" data-fragment-index="1">
+<div class="columns">
+<div class="column text-smaller" style="width:50%;">
+<p>Muni metro’s control software is still loaded from floppy disks <span
+class="citation" data-cites="harding2024san">[4]</span></p>
+</div><div class="column" style="width:50%;">
 <p><img data-src="figures/publicdomainvectors/floppy-disks.svg"
 width="200" /></p>
+</div>
+</div>
 </div>
 </div><div class="column" style="width:50%;">
 <div class="fragment" data-fragment-index="1">
