--- a/lectures/00_intro.html
+++ b/lectures/00_intro.html
@@ -161,15 +161,15 @@
                         <h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
-<col style="width: 7%" />
-<col style="width: 15%" />
-<col style="width: 52%" />
-<col style="width: 25%" />
+<col style="width: 4%" />
+<col style="width: 14%" />
+<col style="width: 51%" />
+<col style="width: 28%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th style="text-align: right;">week</th>
-<th style="text-align: center;">date</th>
+<th style="text-align: right;">date</th>
 <th style="text-align: center;">lecture</th>
 <th style="text-align: center;">practical class</th>
 </tr>
@@ -177,86 +177,86 @@
 <tbody>
 <tr class="odd">
 <td style="text-align: right;">1</td>
-<td style="text-align: center;">2024-09-10</td>
+<td style="text-align: right;">2025-09-17</td>
 <td style="text-align: center;">intro, software architecture, SDLC</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">2</td>
-<td style="text-align: center;">2024-09-17</td>
-<td style="text-align: center;">scrum, kanban</td>
-<td style="text-align: center;"></td>
-</tr>
-<tr class="odd">
-<td style="text-align: right;">3</td>
-<td style="text-align: center;">2024-09-24</td>
-<td style="text-align: center;">requirement analysis, user story
-mapping</td>
 <td style="text-align: center;">project assignment</td>
 </tr>
 <tr class="even">
+<td style="text-align: right;">2</td>
+<td style="text-align: right;">2025-09-24</td>
+<td style="text-align: center;">scrum, kanban</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="odd">
+<td style="text-align: right;">3</td>
+<td style="text-align: right;">2025-10-01</td>
+<td style="text-align: center;">requirement analysis, user story
+mapping</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
+<tr class="even">
 <td style="text-align: right;">4</td>
-<td style="text-align: center;">2024-10-01</td>
+<td style="text-align: right;">2025-10-08</td>
 <td style="text-align: center;">UML, C4</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">5</td>
-<td style="text-align: center;">2024-10-08</td>
+<td style="text-align: right;">2025-10-15</td>
 <td style="text-align: center;">design patterns</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">6</td>
-<td style="text-align: center;">2024-10-15</td>
+<td style="text-align: right;">2025-10-22</td>
 <td style="text-align: center;">interfaces, implementation planning</td>
-<td style="text-align: center;">project workshop</td>
+<td style="text-align: center;"><strong>req. analysis demo</strong></td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">7</td>
-<td style="text-align: center;">2024-10-22</td>
-<td style="text-align: center;">wireframing, clean clode</td>
-<td style="text-align: center;">project workshop</td>
-</tr>
-<tr class="even">
-<td style="text-align: right;">8</td>
-<td style="text-align: center;">2024-10-29</td>
+<td style="text-align: right;">2025-10-29</td>
 <td style="text-align: center;"><strong>school holiday</strong></td>
 <td style="text-align: center;"></td>
 </tr>
+<tr class="even">
+<td style="text-align: right;">8</td>
+<td style="text-align: right;">2025-11-05</td>
+<td style="text-align: center;">wireframing, clean clode</td>
+<td style="text-align: center;">project workshop</td>
+</tr>
 <tr class="odd">
 <td style="text-align: right;">9</td>
-<td style="text-align: center;">2024-11-05</td>
+<td style="text-align: right;">2025-11-12</td>
 <td style="text-align: center;">code quality, code review</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">10</td>
-<td style="text-align: center;">2024-11-12</td>
+<td style="text-align: right;">2025-11-19</td>
 <td style="text-align: center;">testing, legacy code</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">11</td>
-<td style="text-align: center;">2024-11-19</td>
+<td style="text-align: right;">2025-11-26</td>
 <td style="text-align: center;">CI, automatization, devops</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">12</td>
-<td style="text-align: center;">2024-11-26</td>
+<td style="text-align: right;">2025-12-03</td>
 <td style="text-align: center;">summary, course feedback</td>
 <td style="text-align: center;">project workshop</td>
 </tr>
 <tr class="odd">
 <td style="text-align: right;">13</td>
-<td style="text-align: center;">2024-12-03</td>
-<td style="text-align: center;">midterm</td>
-<td style="text-align: center;">project demo</td>
+<td style="text-align: right;">2025-12-10</td>
+<td style="text-align: center;"><strong>midterm</strong></td>
+<td style="text-align: center;"><strong>design demo</strong></td>
 </tr>
 <tr class="even">
 <td style="text-align: right;">14</td>
-<td style="text-align: center;">2024-12-10</td>
+<td style="text-align: right;">2025-12-17</td>
 <td style="text-align: center;">no planned lecture</td>
 <td style="text-align: center;"></td>
 </tr>
@@ -268,7 +268,7 @@ mapping</td>
 <ul>
 <li>available online in two formats
 <ul>
-<li>hangout</li>
+<li>handout</li>
 <li>presentation</li>
 </ul>
 </li>
@@ -477,8 +477,16 @@ contributors, 2024b).</p>
 <div class="column" width="50%">
 <p><strong>dormant rot</strong>: the software in question is not changed, but as the
 environment evolves, it eventually becomes dysfunctional</p>
-<div class="fragment mt-3" data-fragment-index="2">
+<div class="fragment mt-3" data-fragment-index="1">
+<div class="columns">
+<div class="column text-smaller" width="50%">
+<p>Muni metro’s control software is still loaded from floppy disks
+(Harding, 2024)</p>
+</div>
+<div class="column" width="50%">
 <img src="figures/publicdomainvectors/floppy-disks.svg" width="200" />
+</div>
+</div>
 </div>
 </div>
 <div class="column" width="50%">
