deploy: 73c9794f109e8a78a81f4be4459dcf6104f44263

--- a/print.html
+++ b/print.html
@@ -949,9 +949,62 @@ form, but only in its entirety through this notice.</p>
 <a href="https://manifesto.softwarecraftsmanship.org/">/manifesto.softwarecraftsmanship.org</a>.</p>
 </div>
 <h1 id="software-growth"><a class="header" href="#software-growth">software growth</a></h1>
-<p>24 million lines of code – operational and support – needed for the F-35
-to be fully operational</p>
+<div class="columns">
+<div class="column" width="50%">
+<div class="wide-quote mt-4">
+<blockquote>
+<p>24 million lines of code – operational and support – needed for the
+F-35 to be fully operational; when the program started, the estimated
+number of lines of code required was closer to 15 million</p>
+<p>– Robert N. Charette, F-35 Program Continues to Struggle with Software
+(Charette, 2012)</p>
+</blockquote>
+</div>
+</div>
+<div class="column" width="50%">
+<figure>
+<img src="lectures/figures/increasing_functionality_by_software.drawio.svg"
+alt="Increasing functionality implemented by software, reproduction of Figure 2.5 of (Firesmith et al., 2008)" />
+<figcaption aria-hidden="true">Increasing functionality implemented by
+software, reproduction of Figure 2.5 of <span class="citation"
+data-cites="firesmith2008method">(Firesmith et al.,
+2008)</span></figcaption>
+</figure>
+</div>
+</div>
 <div class="notes">
+</div>
+<h2 id="software-growth-cont"><a class="header" href="#software-growth-cont">software growth cont.</a></h2>
+<div class="columns">
+<div class="column mt-1" width="55%">
+<ul>
+<li>1981, GM was using microprocessor-based engine controls executing
+about 50 000 lines of code</li>
+<li>even low-end cars now (<em>2009</em>) have 30 to 50 electronic control units
+(ECUs)
+<ul>
+<li>that means these cars “execute” tens of millions of lines of
+software code that control everything from your brakes to your radio
+volume</li>
+</ul>
+</li>
+<li>for hybrids, the amount of software required for engine control is
+almost double that of a standard car</li>
+</ul>
+<div class="text-smaller">
+<p>source: <a href="https://spectrum.ieee.org/this-car-runs-on-code">This Car Runs on
+Code</a> (Charette, 2009)</p>
+</div>
+</div>
+<div class="column" width="45%">
+<figure>
+<img src="lectures/figures/es_as_total_car_cost.drawio.svg"
+alt="electronics systems of total car cost (Charette, 2021)" />
+<figcaption aria-hidden="true">electronics systems of total car cost
+<span class="citation" data-cites="charette2021how">(Charette,
+2021)</span></figcaption>
+</figure>
+</div>
 </div>
 <h2 id="the-more-the-better"><a class="header" href="#the-more-the-better">the more, the better?</a></h2>
 <blockquote>
@@ -979,18 +1032,28 @@ take care of. It requires more resources, but at the same time it also
 increases complexity.</p>
 </div>
 <h2 id="keep-it-simple"><a class="header" href="#keep-it-simple">keep it simple</a></h2>
+<div class="wide-quote">
+<blockquote>
+<p>We don’t add stuff “just because we can”. We need to have a damn good
+reason for it.</p>
+<p>– <a href="https://lore.kernel.org/all/CAHk-=wiGk+1eNy4Vk6QsEgM=Ru3jE40qrDwgq_CSKgqwLgMdRg@mail.gmail.com/">Linus
+Torvalds</a></p>
+</blockquote>
+</div>
+<div class="wide-quote fragment mt-1">
 <blockquote>
 <p>A designer knows he has achieved perfection not when there is nothing
 left to add, but when there is nothing left to take away.</p>
 <p>– <a href="https://en.wikiquote.org/wiki/Antoine_de_Saint_Exup%C3%A9ry">Antoine de
 Saint-Exupéry</a></p>
 </blockquote>
-<div class="fragment">
+</div>
+<div class="fragment mt-2">
 <ul>
 <li>KISS, an acronym for “Keep it simple, stupid!”
 <ul>
 <li>a variations: keep it stupidly simple</li>
-<li>the term was popular in the 70s</li>
+<li>the acronym was popular in the 70s</li>
 </ul>
 </li>
 </ul>
@@ -1177,6 +1240,33 @@ services</li>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
+<div id="ref-charette2009this" class="csl-entry">
+<p>Charette, R. N. (2009). <em>This car runs on code</em>. <a href="lectures/
+                   https://spectrum.ieee.org/this-car-runs-on-code
+                    " class="uri">
+https://spectrum.ieee.org/this-car-runs-on-code
+</a>.</p>
+</div>
+<div id="ref-charette2012f35" class="csl-entry">
+<p>Charette, R. N. (2012). <em>F-35 program continues to struggle with
+software</em>. <a href="lectures/
+                   https://spectrum.ieee.org/f35-program-continues-to-struggle-with-software
+                    " class="uri">
+https://spectrum.ieee.org/f35-program-continues-to-struggle-with-software
+</a>.</p>
+</div>
+<div id="ref-charette2021how" class="csl-entry">
+<p>Charette, R. N. (2021). <em>How software is eating the car</em>. <a href="lectures/
+                   https://spectrum.ieee.org/meerkat-substation-security
+                    " class="uri">
+https://spectrum.ieee.org/meerkat-substation-security
+</a>.</p>
+</div>
+<div id="ref-firesmith2008method" class="csl-entry">
+<p>Firesmith, D. G., Capell, P., Falkenthal, D., Hammons, C. B., Latimer
+IV, D. T., &amp; Merendino, T. (2008). <em>The method framework for engineering
+system architectures</em>. Auerbach Publications.</p>
+</div>
 <div id="ref-harding2024san" class="csl-entry">
 <p>Harding, S. (2024). San francisco’s train system still uses floppy
 disks—and will for years. In <em>Ars Technica</em>. <a href="lectures/
